Fix dialog in dark mode

--- a/src/freecell/style.css
+++ b/src/freecell/style.css
@@ -18,7 +18,8 @@ html {
     }
 }
 
-body {
+body,
+dialog {
     color: var(--fgcolor);
     background-color: var(--bgcolor);
 }
